Fix quiz panel visibility

--- a/css/style.css
+++ b/css/style.css
@@ -349,6 +349,10 @@ main {
   z-index: 1000;
 }
 
+.hidden {
+  display: none !important;
+}
+
 .modal-overlay.hidden {
   display: none;
 }
